# labs

./: README.md
algorithms/astar/: Tapekha_Vladimir_lb2.odt
algorithms/astar/src/: astar.cpp  greedy.cpp
algorithms/backtracking_square/: Tapekha_Vladimir_lb1.odt
algorithms/backtracking_square/src/: Matrix.cpp  Matrix.h  Square.cpp  Square.h  Squaring.cpp  Squaring.h  main.cpp
algorithms/kmp/: Tapekha_Vladimir_lb4.odt
algorithms/kmp/src/: task1.cpp  task2.cpp
algorithms/tsp/: Tapekha_Vladimir_lb3.odt
algorithms/tsp/src/: CMakeLists.txt  main.cpp  solution.h
algorithms/tsp/src/tests/: tests.cpp
algorithms/tsp/src/tests/files/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
bash_scripts/: 1.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh
bash_scripts/10/: 10.c  a.txt
comp_math/rocket_flight/: main.py
comp_math/rocket_flight/modules/: constants.py  runge4.py
hash_tables/: ChainMethod.py  DoubleHashing.py  TestMethod.py
